--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+<html>
+
+
+  
 <p><img src="https://media.giphy.com/media/26gR1sLKBOq8rsNVu/giphy.gif" alt="BeCode Names" /></p>
 
 <h1 id="environnementoptimispourlapprentissage">Environnement optimisé pour l'apprentissage</h1>
@@ -12,8 +17,7 @@
 
 <h3 id="4drlefun">4. Drôle/Fun</h3>
 
-<p></br>
-</br></p>
+
 
 <h2 id="0introduction-1">0. Introduction :</h2>
 
@@ -30,22 +34,22 @@
 <h2 id="1etatdesprit-1">1. Etat d'esprit</h2>
 
 <ul>
-  <li>### <a href="http://www.eduvs.ch/lcp/methode/index.php?option=com_content&amp;task=view&amp;id=7&amp;Itemid=6&amp;limit=1&amp;limitstart=1">Motivation</a>
+  <li> <a href="http://www.eduvs.ch/lcp/methode/index.php?option=com_content&amp;task=view&amp;id=7&amp;Itemid=6&amp;limit=1&amp;limitstart=1">Motivation</a>
     Afin à vraiment apprendre et maîtriser la matière, nous pensons qu'être motivé est nécessaire. La motivation vous aide à   persévérer et à réussir. Le lien contient plus d'information sûr l'importance de la motivation dans l'apprentissage.</li>
 
-  <li>### Calme
+  <li> Calme
     Il y a beaucoup de gens qui on besoin de la calme pour apprendre la nouvelle matériel. C'est pour ça que BeCode demande    que toutes intéractions se fassent dans le respect de l'autre et du calme des autres étudiants.</li>
 
-  <li>### Enthousiasme
+  <li> Enthousiasme
     Enthousiasme et motivation sont similaire. Les deux mots se rejoignent avec avoir l'envie d'apprendre. Si quelqu'un n'a    pas l'envie d'apprendre, c'est très difficile de l'obliger. La première condition pour apprendre quelque chose, c'est que la  personne ai un esprit ouvert.</li>
 
-  <li>### Confiance en soi
+  <li> Confiance en soi
     Avoir la confiance en soi aidera quelqu'un à atteindre ses objectifs. C'est comme une prophétie auto-réalisatrice, quand quelqu'un croit qu'il peut faire quelque chose, il le fera.</li>
 
-  <li>### Persévérance
+  <li> Persévérance
     Persévérer est très important pour touts étudiants, mais particulièrement pour les étudiants en programmation. Quand on code, il y aura toujours des petits problèmes a résoudre. En résolvant ces problèmes, c'est très important de ne pas abandonner jusqu'au moment où on a trouveé la solution.</li>
 
-  <li>### <a href="https://www.icem-pedagogie-freinet.org/node/13377">Entraide</a>
+  <li> <a href="https://www.icem-pedagogie-freinet.org/node/13377">Entraide</a>
     Dans le coding, il y a un fort sentiment de communauté et unité. L'entraide est une caractéristique enraciné dans la culture des hackers et programmeur.</li>
 </ul>
 
@@ -70,7 +74,7 @@
 
     <p>La musica al igual que los cuadros y las plantas, generan calma y permiten rejarles a quienes los aprecian, lo cual permite un ambiente de confort.</p></li>
 
-  <li><p>### Lumiere:
+  <li><p> Lumiere:
     un ambiente bien iluminado es capaz de transmitir calma y ayudar a mantener el buen humor en todo el equipo de trabajo.</p></li>
 </ul>
 
@@ -79,16 +83,16 @@
 <h2 id="3nourriture-1">3. Nourriture</h2>
 
 <ul>
-  <li>### Snacks
+  <li> Snacks
     Parce qu'il est difficile de travailler le ventre vide, les snacks sont importants. Ces délices permettent de nous donner la  force de travailler.</li>
 
-  <li>### Café
+  <li> Café
     Cette drogue est le moteur d'un bon travail. Le café nous permet de rester debout et éveillé devant la charge de travail qui  peut nous tomber dessus. Il permet aussi de favoriser les échanges et de rapprocher les gens.</li>
 
-  <li>### Bonne nourriture
+  <li> Bonne nourriture
     Comme les snacks, une bonne nourriture permet d'être en forme et d'avoir l'esprit libre pour se concentrer à 100% sur le   travail.</li>
 
-  <li>### Cuistot de qualité
+  <li> Cuistot de qualité
     Qui ne rêve pas d'un cuistot de qualité personnel pour se faire concocter de bons petits plats ?</li>
 </ul>
 
@@ -111,7 +115,7 @@
 
     <p>Une fois les projets términé, la personne qui aura fini la premiere poura choisir une ou un camarade pour aller aux Maldives</p></li>
 
-  <li><p>### Bac à sable
+  <li><p> Bac à sable
     Il est parfois fort plaisant de pouvoir faire des chateaux de sables et par la meme occasion se retrouver avec des grains  de sables partout là où cela peut gener (slip, chaussettes, cheveux)</p></li>
 </ul>
 
@@ -124,3 +128,5 @@
 <a href="http://register.becode.org/">BeCode</a></p>
 
 <p>توماس فيكتور بابلو مولاي(Thomas, Victor, Pablo, Moley)</p>
+
+</html>
